modified some of the text

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
     <header>
         <h1>Korean Colonial Period Periodicals</h1>
-        <p class="subtitle">Browse a few key Korean Periodicals from the Japanese colonial period (1920-1945)</p>
+        <p class="subtitle"></p>
     </header>
     
     <main>
