--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Korean Colonial Period Periodicals</title>
+    <title>Five Korean Colonial Period Periodicals</title>
     <style>
         body {
             font-family: 'Noto Sans KR', 'Noto Sans', -apple-system, BlinkMacSystemFont, sans-serif;
@@ -29,7 +29,7 @@
         }
         
         .subtitle {
-            font-size: 1.2rem;
+            font-size: 1.0rem;
             color: #7f8c8d;
             margin-top: 0;
         }
@@ -136,8 +136,8 @@
 </head>
 <body>
     <header>
-        <h1>Korean Colonial Period Periodicals</h1>
-        <p class="subtitle"></p>
+        <h1>Five Korean Colonial Period Periodicals</h1>
+        <p class="subtitle">A site for students and researchers using some materials in the National Institute of Korean History modern Korean history <a href="https://db.history.go.kr/modern/">database</a>.</p>
     </header>
     
     <main>
