added details in readme

--- a/about.html
+++ b/about.html
@@ -126,13 +126,15 @@
 
 This is a [site](https://yeoksayeou.github.io/) created mostly for students of history to easily browse articles of several Korean colonial period journals. 
 
-The original journals are assumed to be in the public domain. This site only possible thanks to the transcription work of the [National Institute of Korean History](https://db.history.go.kr/) (국사편찬위원회). Their incredible work has provided an immensely important contribution to the study of Korean history. This site has no connection to the institute but has assembled and reproduced its transcriptions for these journals here. 
+The articles displayed here are transcriptions of Korean colonial period magazines that are *already available online*. This site only possible thanks to the transcription work of the [National Institute of Korean History](https://db.history.go.kr/) (국사편찬위원회). Their incredible work has provided an immensely important contribution to the study of Korean history. This site has no connection to the institute but has assembled and reproduced its transcriptions for these journals here. The original journals are assumed to be in the public domain and the pages for them are linked from each magazine page and issue tables of contents.
 
-The institute's [Database of Korean History: Modern Korea](https://db.history.go.kr/modern/) contains a huge array of important historical materials related modern Korean history, including transcriptions of articles for a number of journals such as those reassembled here. This website does not fully reproduce the rich functionality of the original database, which often includes links to images of the original files and allows convenience saerch across all of its holdings, but this site makes it easy to download a local collection of these specific files for those who want to explore them quickly on their own computer for purposes of study and research. To do this, download the [repository](https://github.com/yeoksayeou/yeoksayeou.github.io) for this website and open the webpage locally on your own machine. Open the "index.html" file and you should see this same content and things will run much faster. Also note that each journal has, in its footer, a link to the specific journal home page on the 국사편찬위원회. Warm thanks to them for making their materials open and accessible to researchers everywhere.
+The institute's [Database of Korean History: Modern Korea](https://db.history.go.kr/modern/) contains a huge array of important historical materials related modern Korean history, including transcriptions of articles for a number of journals such as those reassembled here. This website does not fully reproduce the rich functionality of the original database, which often includes links to images of the original files and allows convenience saerch across all of its holdings. 
+
+So why create this site if they are already online? This site makes it easy to conveniently download a *full* local collection of these specific files for those who want to explore them quickly on their own computer for purposes of study and research. To do this, download the entire [repository](https://github.com/yeoksayeou/yeoksayeou.github.io) for this website and open the webpage locally on your own machine. Open the "index.html" file and you should see this same content and things will run much faster. Also note that each journal has, in its footer, a link to the specific journal home page on the 국사편찬위원회. Warm thanks to them for making their materials open and accessible to researchers everywhere.
 
 **Notes on the Translations**
 
-Another aspect of this project is an experiment: translations. Large language model English-translated versions of the articles have been added to make these journals more accessible for students who do not know Korean, who are learning Korean but may still be early on their journey to learning hanja, or who may know Korean but find reading these Sino-Korean and Japanese language texts troublesome enough that it is helpful to have a rough English translation to refer to while scanning over the issues. 
+The other and perhaps most important added feature of this project is an experimental one: translations. Large language model English-translated versions of the articles have been added to make these journals more accessible for students who do not know Korean, who are learning Korean but may still be early on their journey to learning hanja, or who may know Korean but find reading these Sino-Korean and Japanese language texts troublesome enough that it is helpful to have a rough English translation to refer to while scanning over the issues. 
 
 *Does the usefulness of these translations outweigh problems they pose? How bad or good are they? What do they struggle with and what do they do well? These are questions I hope that students and researchers will consider as they explore the translations included here.*
 
@@ -148,11 +150,19 @@ The LLM translation exhibit all the usual problems of large language models. Be 
 
 *Example Four:* The summary section, when present, was asked to speculate about the importance of the article for someone studying Korean history. This was as an experiment and sometimes it produces correct, but largely obvious observations. In other cases, however, it may make claims based on interpretations of the text that do not hold up. 
 
-There are many other kinds of translation issues and it would be useful to have more examples posted in the "Issues" for the repository. This was an experiment to see how functional the full translation of these transcribed journals might be for careful and limited use in a teaching or research context. In the latter, especially, they definitely need to be used in close coordination with the originals (Even the original transcriptions this depends on have their own issues do not always match the original files, an issue is explored in detail in this article: Fremery, Wayne de, and Sang Hun Kim. 'Remodeling "Creation": The July 1922 Issue of "Kaebyŏk" Magazine'. *The Journal of Korean Studies (1979-)* 20, no. 2 (2015): 415–57. [JSTOR]( https://www.jstor.org/stable/43919327)) 
+There are many other kinds of translation issues and it would be useful to have more examples posted in the "Issues" for the repository. This was an experiment to see how functional the full translation of these transcribed journals might be for careful and limited use in a teaching or research context. In the latter, especially, they definitely need to be used in close coordination with the originals (Even the original transcriptions this depends on have their own issues do not always match the original files, an issue is explored in detail in this article: Fremery, Wayne de, and Sang Hun Kim. ‘Remodeling “Creation”: The July 1922 Issue of “Kaebyŏk” Magazine’. *The Journal of Korean Studies (1979-)* 20, no. 2 (2015): 415–57. [JSTOR]( https://www.jstor.org/stable/43919327)) 
 
 In conclusion: the translations provided here have not been reviewed for accuracy and need to be viewed with the kind of critical distance and distrust these algorithmically produced texts always deserve.
 
 The translations were produced by Gemini 2.5 Experimental when it was free and had unlimited usage via the API. When this ended, Pyŏlgŏn'gon had to switch to having translations done by Gemini 2.0 flash, which was affordable, but of lesser quality. It struggled to understand the prompt (included in the repository as prompt.txt) and include all its components so the summary and glossary were left out. Another version of these translations with OpenAI 4o-mini will be included in the repository for anyone who wants to compare the quality of the translations. 
+
+**Messy Data in the Translations** 
+
+Related to the problem of translation errors, the large language model did not always return data consistently. This means that, when viewing the English version you may find the following:
+
+- sometimes metadata is missing because it was returned in an inconsistent format
+- sometimes the articles were very long, longer than the output token limits for the  large language model and these were skipped. You will then usually just see the original article instead.
+- Sometimes it didn't follow the instructions on the sub-section below the main translation so you may see some variation there.
 
 **Technical Notes** 
 
@@ -161,6 +171,10 @@ You may browse the raw files online here via the [site](https://yeoksayeou.githu
 The search script loads the entire collection of articles from a journal into memory, while the browsing page loads whole issues into memory. Be patient before your first search as this may take a few seconds to load. This goes relatively fast offline, but is slower when hosted remotely. 
 
 There is no reason this can't be easily transformed into a far faster database driven version. Anyone is of course free to make a more efficient version and fork this repository. All the scripts here were written by Claude Sonnet 3.7, with some ChatGPT 4o and Gemini 2.5.
+
+**Shortcuts**
+
+When viewing an article you can use the left or right arrows on your keyboard to move quickly from one article to another inside a given issue. On a mobile device you can swipe left or right to do the same. 
     </div>
 
     <script>
