--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 <body>
     <header>
         <h1>Five Korean Colonial Period Periodicals</h1>
-        <p class="subtitle">A site for students and researchers using some materials in the National Institute of Korean History modern Korean history <a href="https://db.history.go.kr/modern/">database</a>.</p>
+        <p class="subtitle">A site for students and researchers using some materials in the National Institute of Korean History modern Korean history <a href="https://db.history.go.kr/modern/">database</a>.
+        Browse and search the journal articles, as well as English translations produced by large language models. Read more: <a href="about.html">About this Project</a></p>
     </header>
     
     <main>
