--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@ The LLM translation exhibit all the usual problems of large language models. Be 
 
 *Example Two*: If there is a mistranslation of a word, based on a misunderstanding of the context, this may heavily impact the translation of the remainder of the article. If words are assumed to be a Korean spelling of a Western name, for example, but in fact it is some other word entirely, that can change the contents significantly for the remainder of the translation. 
 
-*Example Three:* The glossaries, when they are provided, may not provide the definition most appropriate for the article if the LLM, even if it was correctly translated in the original text.
+*Example Three:* The glossaries, when they are provided, may not provide the definition most appropriate for the article, even if it was correctly translated in the original text.
 
 *Example Four:* The summary section, when present, was asked to speculate about the importance of the article for someone studying Korean history. This was as an experiment and sometimes it produces correct, but largely obvious observations. In other cases, however, it may make claims based on interpretations of the text that do not hold up. 
 
